# CrossList

./: .env.example  .gitignore  PROJECT_BRIEF.md  README.md
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260423_0001_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/crosslist_cli/: __init__.py  __main__.py
apps/api/db/: __init__.py  session.py
apps/api/matching/: __init__.py  matcher.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  match-panel.tsx  page.tsx
apps/web/src/components/ui/: button.tsx  card.tsx
infra/: docker-compose.yml
