[project]
name = "crosslist-api"
version = "0.1.0"
description = "FastAPI backend for CrossList"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16,<2.0",
  "asyncpg>=0.30,<1.0",
  "click>=8.1,<9.0",
  "fastapi>=0.115,<1.0",
  "openai>=1.30,<2.0",
  "pgvector>=0.4,<1.0",
  "crosslist-scrapers",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "db", "pipelines", "crosslist_cli"]

[tool.uv]
package = true

[tool.uv.sources]
crosslist-scrapers = { path = "../../packages/scrapers", editable = true }

[project.scripts]
crosslist = "crosslist_cli.__main__:app"
